# tincanradar

./: .f2py_f2cmap  .flake8  .gitignore  .travis.yml  CMakeLists.txt  CalcBeat.py  FMCW_chirp_linearity.py  FS2dBm.py  Friis.py  Makefile  README.md  README.rst  SAR.py  SimChirp.py  ToneFinder.py  beats.py  comm.f90  compiler.cmake  fwdmodel.f90  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_chirp.f90
matlab/: LM317.m  active_filter_sallen_key.m  dual_slot_antenna.m  filter_calc.m  filter_coeff.m  filters.m  microstrip_gupta.m  microstrip_height_considerations.m  microstrip_pozar.m  microstrip_pozar_4harmonic.m  microstrip_shortening_fringing.m  patch2.m  patch_calc.m  thickest_substrate_for_patch_antenna.m  zovsw.m
src/tincanradar/: __init__.py  fwdmodel.py
src/tincanradar/tests/: test_all.py
test/: test.py
tests/: test.py  test_all.py
tincanradar/: __init__.py  antenna.py  beats.py  displacement.py  estimation.py  fwdmodel.py  plots.py  windowavg.py
