[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tincanradar"
description = "Model and Build a $35 radar from coffee cans and MMICs"
keywords = ["radar", "coffee can radar", "synthetic aperture radar"]
classifiers = ["Development Status :: 4 - Beta",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Fortran",
 "Programming Language :: Python :: 3",
 "Topic :: Scientific/Engineering"
]
requires-python = ">=3.8"
dynamic = ["version", "readme"]
dependencies = ["numpy", "scipy"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "tincanradar.__version__"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy"]

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
allow_redefinition = true
