[metadata]
name = tincanradar
version = 0.1.1
author = Michael Hirsch, Ph.D.
description = Model and Build a $35 radar from coffee cans and MMICs
url = https://github.com/scivision/tincanradar
keywords =
  radar
  coffee can radar
  synthetic aperture radar
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  scipy 

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn

[options.entry_points]
console_scripts =


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
