[metadata]
name = tincanradar
version = 0.1.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Model and Build a $35 radar from coffee cans and MMICs
url = https://github.com/scivision/tincanradar
keywords =
  radar
  coffee can radar
  synthetic aperture radar
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  numpy
  scipy

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plot =
  matplotlib
  seaborn
